[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://root/scenes/game_scene/achievement_master/ui/toast/achievement_toast.gd" id="achievement_toast_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_toast_bg"]
bg_color = Color(0.12, 0.12, 0.16, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0

[node name="AchievementToast" type="PanelContainer"]
custom_minimum_size = Vector2(250, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_toast_bg")
script = ExtResource("achievement_toast_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="RankLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[B]"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "実績名"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "説明"
autowrap_mode = 2

[node name="ApLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.8, 0.8, 0.3, 1)
text = "+1 AP"
